--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "lorem-ipsum": "^2.0.8",
     "loremipsum": "^0.1.2"
