--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,6 +7,12 @@
     "config": { "includeFiles": ["dist/**"] }
    }
   ],
+  "crons": [
+    {
+        "path": "/cron",
+        "schedule": "30 18 * * *"
+    }
+],
   "routes": [
    {
     "src": "/(.*)",
