--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cubejs-client/core": "^0.31.0",
+    "chart.js": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
-    "zod": "^3.22.4",
-    "@cubejs-client/core": "^0.31.0",
-    "chart.js": "^4.0.0"
+    "zod": "^3.22.4"
   }
 }
