--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
   ],
   "crons": [
     {
-        "path": "./index.js",
+        "path": "/index.js",
         "schedule": "30 18 * * *"
     }
 ],
