--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -16,5 +16,9 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+  ],
+  "crons": [{
+    "path": "/index.js",
+    "schedule": "0 10 * * *"
+  }]
 }
