--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -18,7 +18,7 @@
     }
   ],
   "crons": [{
-    "path": "/index.js",
-    "schedule": "0 10 * * *"
+    "path": "/index",
+    "schedule": "0 0 * * *"
   }]
 }
